# NeuNet

./: Cargo.toml  todo.txt
src/: layers.rs  loss.rs  main.rs  main.rsu  model.rs
src/layers/: dense.rs  dropout.rs  relu.rs  softmax.rs  test.rs  test_layer.rs
src/loss/: mean_squared.rs
