[package]
name = "NeuNet"
version = "0.1.0"
edition = "2021"

[dependencies]
b-box = "0.1.0"
bincode = "1.3.3"
derive-getters = "0.5.0"
itertools = "0.13.0"
ndarray = { version = "0.15", features = ["serde"] }
ndarray-npy = "0.8.1"
ndarray-stats = "0.5.1"
serde = { version = "1.0.208", features = ["derive"] }
serde_json = "1.0.125"
typetag = "0.2.18"
